// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDelegate should allow multiple selection 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy cowKBD fixed left-0 right-0 z-10 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxhCb idmnCf"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Select a Delegate
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="text-theme-neutral-700"
        >
          Please select the Delegate you wish to vote for. For additional information about the delegate and/or payouts, please visit MarketSquare.
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-100 px-12 pt-8 pb-10 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex px-6 py-4 bg-white rounded shadow-xl"
            >
              <svg
                class="w-4 text-theme-neutral-300"
              >
                search.svg
              </svg>
              <div
                class="flex-1 mr-4"
              >
                <input
                  class="sc-Axmtr INsXA overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary border-none shadow-none"
                  data-testid="Input"
                  placeholder="Search for a Delegate"
                />
              </div>
              <button
                class="sc-AxjAm jgOgud my-1"
                color="primary"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-14"
        >
          <div
            class="sc-AxheI cvvcIQ"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Choose
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                         
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Delegate Name
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Rank
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        MarketSquare
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Forged ARK
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  justify-end mr-8"
                    >
                      <div
                        class="mr-1"
                      >
                        Votes
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Voting
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate1"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate1
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #1
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      225,946 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      2.43%
                    </span>
                    <span>
                      3,143,322 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 bg-theme-success-100"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate2"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate2
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #2
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      465,437 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.828%
                    </span>
                    <span>
                      2,364,566 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate3"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate3
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #3
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 bg-theme-success-100"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate4"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate4
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #4
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="absolute bottom-0 left-0 right-0 pt-8 pb-10 pl-4 pr-12 bg-white shadow-2xl"
          data-testid="SelectedDelegateModal__footer"
        >
          <div
            class="flex"
          >
            <div
              class="px-8 mr-8 font-semibold border-r border-theme-neutral-300"
            >
              <div
                class="text-sm text-theme-neutral-500"
              >
                Quantity
              </div>
              <div
                class="text-theme-neutral-700"
              >
                2/50
              </div>
            </div>
            <div
              class="flex-1"
            >
              <div
                class="flex justify-between"
              >
                <div
                  class="font-semibold"
                >
                  <div
                    class="text-sm text-theme-neutral-500"
                  >
                    Delegates
                  </div>
                  <div
                    class="cursor-pointer text-theme-primary-700 hover:text-theme-primary-500"
                    data-testid="SelectedDelegateModal__toggle-show-selected"
                  >
                    Hide List
                  </div>
                </div>
                <button
                  class="sc-AxjAm eixJcU"
                  color="primary"
                  type="button"
                >
                  Vote
                </button>
              </div>
              <div
                class="mt-2"
              >
                <div
                  class="flex items-center py-4 font-semibold border-b border-dashed border-theme-neutral-200 last:border-0"
                >
                  <div
                    class="flex flex-1"
                  >
                    <div
                      class="sc-AxiKw bikKyU mr-8"
                    />
                    <div
                      class="mr-2"
                    >
                      Delegate2
                    </div>
                    <div
                      class="text-theme-neutral-500"
                    >
                      AADDDDDDDRREEEEESSSSSSS
                    </div>
                  </div>
                  #2
                </div>
                <div
                  class="flex items-center py-4 font-semibold border-b border-dashed border-theme-neutral-200 last:border-0"
                >
                  <div
                    class="flex flex-1"
                  >
                    <div
                      class="sc-AxiKw bikKyU mr-8"
                    />
                    <div
                      class="mr-2"
                    >
                      Delegate4
                    </div>
                    <div
                      class="text-theme-neutral-500"
                    >
                      AADDDDDDDRREEEEESSSSSSS
                    </div>
                  </div>
                  #4
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectDelegate should not render if not open 1`] = `<DocumentFragment />`;

exports[`SelectDelegate should only allow one selection 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy cowKBD fixed left-0 right-0 z-10 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxhCb idmnCf"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Select a Delegate
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="text-theme-neutral-700"
        >
          Please select the Delegate you wish to vote for. For additional information about the delegate and/or payouts, please visit MarketSquare.
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-100 px-12 pt-8 pb-10 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex px-6 py-4 bg-white rounded shadow-xl"
            >
              <svg
                class="w-4 text-theme-neutral-300"
              >
                search.svg
              </svg>
              <div
                class="flex-1 mr-4"
              >
                <input
                  class="sc-Axmtr INsXA overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary border-none shadow-none"
                  data-testid="Input"
                  placeholder="Search for a Delegate"
                />
              </div>
              <button
                class="sc-AxjAm jgOgud my-1"
                color="primary"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-14"
        >
          <div
            class="sc-AxheI cvvcIQ"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Choose
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                         
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Delegate Name
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Rank
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        MarketSquare
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Forged ARK
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  justify-end mr-8"
                    >
                      <div
                        class="mr-1"
                      >
                        Votes
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Voting
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate1"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate1
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #1
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      225,946 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      2.43%
                    </span>
                    <span>
                      3,143,322 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate2"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate2
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #2
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      465,437 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.828%
                    </span>
                    <span>
                      2,364,566 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 bg-theme-success-100"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate3"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate3
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #3
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate4"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate4
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #4
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="absolute bottom-0 left-0 right-0 pt-8 pb-10 pl-4 pr-12 bg-white shadow-2xl"
          data-testid="SelectedDelegateModal__footer"
        >
          <div
            class="flex"
          >
            <div
              class="px-8 mr-8 border-r border-theme-neutral-300"
            >
              <div
                class="text-sm text-theme-neutral-500"
              >
                Rank
              </div>
              <div
                class="font-semibold text-theme-neutral-700"
              >
                #3
              </div>
            </div>
            <div
              class="flex flex-1"
            >
              <div
                class="sc-AxiKw bikKyU mr-2"
              />
              <div>
                <div
                  class="text-sm text-theme-neutral-500"
                >
                  Delegate Address
                </div>
                <div
                  class="font-semibold text-theme-neutral-700"
                >
                  Delegate3 - AADDDDDDDRREEEEESSSSSSS
                </div>
              </div>
            </div>
            <button
              class="sc-AxjAm eixJcU"
              color="primary"
              type="button"
            >
              Vote
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectDelegate should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy cowKBD fixed left-0 right-0 z-10 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxhCb idmnCf"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Select a Delegate
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="text-theme-neutral-700"
        >
          Please select the Delegate you wish to vote for. For additional information about the delegate and/or payouts, please visit MarketSquare.
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-100 px-12 pt-8 pb-10 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex px-6 py-4 bg-white rounded shadow-xl"
            >
              <svg
                class="w-4 text-theme-neutral-300"
              >
                search.svg
              </svg>
              <div
                class="flex-1 mr-4"
              >
                <input
                  class="sc-Axmtr INsXA overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary border-none shadow-none"
                  data-testid="Input"
                  placeholder="Search for a Delegate"
                />
              </div>
              <button
                class="sc-AxjAm jgOgud my-1"
                color="primary"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-14"
        >
          <div
            class="sc-AxheI cvvcIQ"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Choose
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                         
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Delegate Name
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Rank
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        MarketSquare
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Forged ARK
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  justify-end mr-8"
                    >
                      <div
                        class="mr-1"
                      >
                        Votes
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb idmnCf"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Voting
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate1"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate1
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #1
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      225,946 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      2.43%
                    </span>
                    <span>
                      3,143,322 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate2"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate2
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #2
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      465,437 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.828%
                    </span>
                    <span>
                      2,364,566 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate3"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate3
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #3
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate4"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="sc-AxiKw fHyikq"
                    />
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate4
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-700"
                  >
                    #4
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-700"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-700"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral-500"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-100"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
